maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:35: error: value =< is not a member of Int
    if(hauteurDepart =< hauteur-1)
                     ^